--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,16 @@
     src: url('../fonts/Lato-Bold.ttf') format('truetype');
 }
 
+@font-face {
+    font-family: 'Lato-Regular';
+    src: url('../fonts/Lato-Regular.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'MavenPro-Regular';
+    src: url('../fonts/MavenPro-Regular.ttf') format('truetype');
+}
+
 html,
 body {
     height: 100%;
@@ -76,15 +86,21 @@ header .navbar-nav :hover a {
 	height: 207px;
 }
 
+h1, h2 {margin:0;}
+
 #about h1 {
+	font-family: 'MavenPro-Regular', Arial, serif !important;
 	color:white !important;
 }
 #about h2 {
+	font-family: 'MavenPro-Regular', Arial, serif !important;
 	color: #2f917d !important;
 }
 
 #about p {
+	margin-top: 20px;
 	text-align: justify;
+	font-family: 'Lato-Regular', Arial, serif !important;
 	color: white !important;
 }
 
@@ -98,4 +114,66 @@ header .navbar-nav :hover a {
 
 #about img {
 	float:right;
+}
+
+#contact {
+	background: #323232;
+	height: 600px;
+	color: white !important;
+}
+
+
+footer {
+	background: #222222;
+	height: 45px;}
+
+input {
+	display:block;
+	float:right;
+}
+
+input[type=mail], input[type=name], input[type=subject] {
+ border: none;
+ height: 40px;
+ width: 580px;
+ }
+
+ input[type=message] {
+ border: none;
+ height: 150px;
+ width: 580px;
+
+ }
+
+ input[type=send] {
+ border: none;
+ height: 40px;
+ width: 90px;
+ text-align: center;
+ }
+
+.name, .mail, .subject, .message {
+	background: #454545;
+	margin-bottom: 10px;
+}
+
+.message {
+}
+
+.send {
+	background: #2eb398;
+	margin-bottom: 10px;
+}
+
+#contact .col-md-6 {
+  margin-top: 70px;
+}
+
+#contact .container .col-md-6 {
+	padding:0;
+}
+
+#contact h1 {
+	padding-left: 0px;
+	text-align: left;
 }
